Archiveren completed Todo items
